--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,45 @@
 language: node_js
+
 node_js:
-  - '0.8'
+#  - '0.8'
   - '0.10'
+
+branches:
+    only:
+        - master
+
+env:
+    global:
+        - secure: "cY2wv0lMUnan4hgFq0yEw7ZYJ0s3LnBt3YvgZdv/4YSMjjTdvZElUlVFxkofjjHGDn+Kl5Ey3CdjQgx0U6B/2mrVD3I32SmBpSzaIZDk/f8z8+A3p78VCdFMR5I1ciIjySc/Gb2a6xpXwsEwgnChLM8mb9/hSSn5AmAGJo8Lmx4="
+        - GH_OWNER: jayproulx
+        - GH_PROJECT_NAME: generator-untethered
+
 before_install:
   - currentfolder=${PWD##*/}
   - if [ "$currentfolder" != 'generator-untethered' ]; then cd .. && eval "mv $currentfolder generator-untethered" && cd generator-untethered; fi
 
+before_script:
+    # install dependencies
+    - gem update --system
+    - gem install compass
+    - npm install -g grunt-cli bower
+
+script:
+    # We want to gate on passing tests and a successful build
+    - bower install
+    - grunt ci
+
+after_success:
+    # Any command that using GH_OAUTH_TOKEN must pipe the output to /dev/null to not expose your oauth token
+    - git submodule add -b gh-pages https://<%="${GH_OAUTH_TOKEN}"%>@github.com/<%="${GH_OWNER}"%>/<%="${GH_PROJECT_NAME}"%> site > /dev/null 2>&1
+    - cd site
+    - if git checkout gh-pages; then git checkout -b gh-pages; fi
+    - git rm -r .
+    - cp -R ../src/main/www/* .
+    - cp -R ../src/main/www/.* .
+    - git add -f .
+    - git config user.email "travisci@pollensoft.com"
+    - git config user.name "Jay Proulx"
+    - git commit -am "adding the grunt build files to gh-pages [ci skip]"
+    # Any command that using GH_OAUTH_TOKEN must pipe the output to /dev/null to not expose your oauth token
+    - git push https://<%="${GH_OAUTH_TOKEN}"%>@github.com/<%="${GH_OWNER}"%>/<%="${GH_PROJECT_NAME}"%> HEAD:gh-pages > /dev/null 2>&1
