--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bower": "~1.2.8",
     "yo": "~1.0.4",
     "generator-untethered": "git://github.com/pollensoft/untethered",
-    "fs.extra": "~1.2.1"
+    "fs-extra": "~0.8.1"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
