Fixing a couple of overwritten lines

--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev-portal",
-  "version": "0.0.1",
+  "name": "<%= _.slugify(appName) %>",
+  "version": "<%= appVersion %>",
   "main": "src/main/node/server.js",
   "devDependencies": {
     "express": "3.x",
