--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "dev-portal",
-  "version": "0.0.1",
+  "name": "<%= _.slugify(appName) %>",
+  "version": "<%= appVersion %>",
   "main": "src/main/www/index.html",
   "directory": "src/main/www/libs",
   "dependencies": {
